# BSBlindspots

./: .env.example  .gitignore  AGENTS.md  LIMITATIONS.md  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
ops/launchd/: com.andyque.bsblindspots.polygon-refresh.plist  com.andyque.bsblindspots.yahoo-refresh.plist
scripts/: collect_daily.py  collect_daily.sh  collect_events.py  run_polygon_backfill.sh  run_yahoo_daily_refresh.sh
src/data/: export_excel.py  fetch_events.py  fetch_options.py  fetch_rates.py  fetch_stocks.py  polygon_refresh.py  refresh_all.py  universe.py
src/data/events/: __init__.py  cpi.py  earnings.py  fomc.py  nfp.py  unified.py
src/features/: build_features.py
src/models/: evaluate.py  explain.py  train.py
src/pricing/: black_scholes.py  implied_vol.py  volatility.py
src/viz/: plots.py
tests/: test_black_scholes.py  test_events.py
